--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,35 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <div class="popup__input-wrapper">
+          <input 
+          type="text" 
+          name="name" 
+          id="name"
+          class="popup__input popup__input_type_name" 
+          placeholder="Имя" 
+          minlength="2" 
+          maxlength="40"
+          pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          required>
+        <span class="popup__input-error name-error"></span>
+        </div>
+        <div class="popup__input-wrapper">
+          <input 
+          type="text" 
+          name="description" 
+          id="description"
+          class="popup__input popup__input_type_description" 
+          placeholder="Занятие" 
+          minlength="2" 
+          maxlength="200"
+          pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+          required>
+          <span class="popup__input-error description-error"></span>
+        </div>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
@@ -48,8 +74,26 @@
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <div class="popupu__input-wrapper">
+          <input 
+            type="text" 
+            name="place-name" 
+            id="place-name"
+            class="popup__input popup__input_type_card-name" 
+            placeholder="Название" 
+            required>
+          <span class="popup__input-error place-name-error"></span>
+        </div>
+        <div class="popup__input-wrapper">
+          <input 
+            type="url" 
+            name="link" 
+            id="link"
+            class="popup__input popup__input_type_url" 
+            placeholder="Ссылка на картинку" 
+            required>
+          <span class="popup__input-error link-error"></span>
+        </div>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
