--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,26 @@
   </div>
 </div>
 
+<div class="popup popup_type_new-avatar">
+  <div class="popup__content">
+    <button type="button" class="popup__close"></button>
+    <h3 class="popup__title">Обновить аватар</h3>
+    <form class="popup__form" name="new-avatar">
+      <div class="popup__input-wrapper">
+        <input 
+          type="url" 
+          name="avatar" 
+          id="avatar"
+          class="popup__input popup__input_type_avatar" 
+          placeholder="Ссылка на новый аватар"
+          required>
+        <span class="popup__input-error avatar-error"></span>
+      </div>
+      <button type="submit" class="button popup__button">Сохранить</button>
+    </form>
+  </div>
+</div>
+
 <template id="card-template">
   <li class="places__item card">
     <img class="card__image" src="" alt="" />
