--- a/src/index.html
+++ b/src/index.html
@@ -112,26 +112,36 @@
       <p class="popup__caption"></p>
     </div>
   </div>
-</div>
 
-<div class="popup popup_type_new-avatar popup_is-animated">
-  <div class="popup__content">
-    <button type="button" class="popup__close"></button>
-    <h3 class="popup__title">Обновить аватар</h3>
-    <form class="popup__form" name="new-avatar">
-      <div class="popup__input-wrapper">
-        <input 
-          type="url" 
-          name="avatar" 
-          id="avatar"
-          class="popup__input popup__input_type_avatar" 
-          placeholder="Ссылка на новый аватар"
-          required>
-        <span class="popup__input-error avatar-error"></span>
-      </div>
-      <button type="submit" class="button popup__button">Сохранить</button>
-    </form>
+  <div class="popup popup_type_new-avatar popup_is-animated">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar">
+        <div class="popup__input-wrapper">
+          <input 
+            type="url" 
+            name="avatar" 
+            id="avatar"
+            class="popup__input popup__input_type_avatar" 
+            placeholder="Ссылка на новый аватар"
+            required>
+          <span class="popup__input-error avatar-error"></span>
+        </div>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
   </div>
+
+  <div class="popup popup_type_delete popup_is-animated">
+    <div class="popup__content popup__content_delete">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Вы уверены?</h3>
+      <button type="button" class="button popup__button">Да</button>
+      </form>
+    </div>
+  </div>
+  
 </div>
 
 <template id="card-template">
